fix modal centering and overflow

--- a/src/components/PageComponents/Home/NewsScreen/NewsRow/style.module.scss
+++ b/src/components/PageComponents/Home/NewsScreen/NewsRow/style.module.scss
@@ -11,9 +11,9 @@
   // Escape parent to fill screen
   width: calc(100vw - 1.05rem); // -1.05 rem for scrollbar
   height: 100%;
-  margin-left: calc(-50vw + 50%);
+  margin-left: calc(-50vw + 50% + 0.525rem); // -1.05 / 2
 
-  animation: backdropBlur forwards ease-out 0.1s;
+  animation: backdropBlur forwards ease-out 0.2s;
 
   background-color: transparent;
 
@@ -26,6 +26,7 @@
     overflow-y: scroll;
     padding: $spacing;
     height: fit-content;
+    max-height: 100%;
 
     animation: modalSlide both ease-out 0.3s 0.1s;
 
